--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://hiraethecho.github.io/nvim"
+base_url = "https://nvim-docs.netlify.app"
 theme = "neovim-theme"
 
 # Whether to automatically compile all Sass files in the sass directory
